cluster/istio/local.istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: local-gateway
  namespace: test-local

spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - istio.test-local.lrn-srv-01.edu
